# miniML

./: pyproject.toml  requirements.txt  requirements_gui.txt
miniML/: __init__.py
miniML/core/: miniML.py  miniML_gui.py  miniML_plot_functions.py  miniML_settings.py  miniml.css.template
miniML/core/tests/: test_miniML_functions.py
