[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniML"
version = "0.1.0"
description = "Mini machine learning package for electrophysiology"
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = { file = "LICENSE" }
authors = [
  { name = "delvendahl" },
]

# Keep these aligned with requirements.txt
dependencies = [
  "scikit-learn==1.6.1",
  "matplotlib==3.8.2",
  "h5py==3.10.0",
  "pandas==1.5.3",
  "numpy==1.23.5",
  "scipy==1.10.1",
  "tensorflow>=2.12.0,<2.16.0",
  "pyabf==2.3.8",
]

[project.optional-dependencies]
# Additional dependencies for the Qt GUI (requirements_gui.txt minus base deps)
gui = [
  "PyQt5>=5.15.10",
  "qt-material==2.14",
  "pyqtgraph==0.13.7",
]

[project.urls]
Homepage = "https://delvendahl.github.io/miniML/intro.html"
Documentation = "https://delvendahl.github.io/miniML/intro.html"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["miniML*"]

[tool.setuptools.package-data]
"miniML.core" = [
  "*.template",
  "icons/*.svg",
]